# bashmocker

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-package.yml
src/bashmocker/: bashmocker.py
test/: __init__.py  test_bashmocker.py
tests/: test_bashmocker.py
