[metadata]
name = bashmocker
version = 0.1.0
author = Timothy Booth
author_email = tim.booth@ed.ac.uk
description = A Python helper for unit testing shell scripts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tbooth/bashmocker
project_urls =
    Bug Tracker = https://github.com/tbooth/bashmocker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
# ???
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
